# platelet-classification

./: .gitignore  README.md  classify_new_images.py  get_confusion.py  platelet_factin_tf.py  pyproject.toml  run.sh  split_data_train_val.py
