[tool.poetry]
name = "platelet-classification"
version = "0.1.0"
description = ""
authors = ["kevin-beussman <kevin.beussman@gmail.com>"]
readme = "README.md"
packages = [{include = "platelet_classification"}]

[tool.poetry.dependencies]
python = "~3.10"
tensorflow = "^2.11.0"
opencv-python = "^4.7.0.68"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
